force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/clariti__ArcGIS_Clariti_Layer_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Define the fields and filter criteria for the layers for the ArcGIS component</description>
    <label>ArcGIS Clariti Layer Definition</label>
    <pluralLabel>ArcGIS Clariti Layer Definitions</pluralLabel>
</CustomObject>