force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__Active__c.field-meta.xml
<CustomField>
    <fullName>clariti__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>