force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__ArcGIS_Clariti_Layer_Configuration__c.field-meta.xml
<CustomField>
    <fullName>clariti__ArcGIS_Clariti_Layer_Configuration__c</fullName>
    <label>ArcGIS Clariti Layer Configuration</label>
    <referenceTo>clariti__ArcGIS_Clariti_Layer_Configuration__mdt</referenceTo>
    <relationshipLabel>ArcGIS Clariti Layer Definitions</relationshipLabel>
    <relationshipName>Layer_Definitions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>