force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__Fields__c.field-meta.xml
<CustomField>
    <fullName>clariti__Fields__c</fullName>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>