force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>clariti__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>