force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__Layer_Label__c.field-meta.xml
<CustomField>
    <fullName>clariti__Layer_Label__c</fullName>
    <label>Layer Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>