force-app/main/default/objects/clariti__ArcGIS_Clariti_Layer_Definition__mdt/fields/clariti__Source_List_View__c.field-meta.xml
<CustomField>
    <fullName>clariti__Source_List_View__c</fullName>
    <label>Source List View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>